# gopher

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: CAGI_analysis.py  GIA_addition_experiments.py  binary_comparison_run.py  evaluate.py  paper_run_evaluate.py  performance_across_bin_sizes.py  robustness_evaluation.py  save_model_logits.py  smoothening.py  test_threshold_experiment.py  tomtom_search.py  umap_embeddings_plot.py
cleanup_code/: VCF_CAGI.py  add_GIA_no_pos_opt.py  add_motifs_GIA.py  binary_VCF.py  dash_embeddings.py  dash_predictions.py  dinuc_shuffle.py  explain.py  quant_GIA.py  robustness_test_pipeline.py  saliency_plot.py  test_to_bw_fast.py  tomtom_upstream.py  util.py
cleanup_jn/: 2app.ipynb  Define_Sweep.ipynb  GIA_figure.ipynb  GIA_fin.ipynb  Loss visualizations.ipynb  Paper_result_compile.ipynb  augmentation_robustness.ipynb  augmentation_visualizations.ipynb  binsize_exp.ipynb  cell_line_idr_tfrs.ipynb  colab.ipynb  correlation_matrix.ipynb  evaluation.ipynb  mysweep.ipynb  paper_sweeps.ipynb  paper_tables.ipynb  quant_dataset_colab.ipynb  res_basenji_32_in_depth.ipynb  sample_size_for_add_GIA.ipynb  seamonster_GIA_DEEPSTARR.ipynb  seamonster_GIA_experiments_add_motifs.ipynb  seamonster_GIA_shuffle.ipynb  seamonster_basenji_residual_32.ipynb  smooth_exp.ipynb  smooth_triangle_plot.ipynb  temp.ipynb  test_loss.ipynb  test_threshold_vs_pearsonr.ipynb  train_threshold_vs_pearsonr.ipynb  vcf_to_h5.ipynb  viz.ipynb  viz_binary_performance.ipynb
data/: basenji_data.py  basenji_data_read.py  bw_to_tfr.sh  genome.py  util.py  (+1 more)
(+80 files in other folders)
