[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=['gopher']

[project]
name = "bio-gopher"
version = "1.0.2"
authors = [
  { name="Shushan Toneyan", email="toneyan@cshl.edu" },
  { name="Ziqi Tang", email="ztang@cshl.edu" },
  { name="Peter Koo", email="pkoo@cshl.edu"}
]
description = "GOPHER: GenOmic Profile-model compreHensive EvaluatoR"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shtoneyan/gopher"